# project-chimera

./: .coderabbit.yaml  .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  run_tests.sh
.cursor/: mcp.json
.cursor/rules/: agent.mdc  context.mdc
.github/workflows/: main.yml
research/: architecture_strategy.md  tooling_strategy.md
scripts/: auto_commit.sh  spec-check.sh
skills/: README.md  __init__.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: README.md  __init__.py  test_skills_interface.py  test_trend_fetcher.py
